--- a/betmaster.html
+++ b/betmaster.html
@@ -1,3 +1,3 @@
 <div style="width: 100%; height:0; position: relative; padding-bottom: 56.24929688378895%;">
-<iframe src="https://v12.thetvapp.to/hls/PPV01/tracks-v2a1/mono.m3u8?token=yqXo9ZkJZFO3crEo9uHMUw&expires=1741496646&user_id=dEk2WWF0NzFjY1dqZURoMFZPdkdKSkM2QWpzeUlKaTQzQ0JEVTBKOA==" style="position: absolute; top:0; left:0; width: 100%; height: 100%; border: 0;" allow="autoplay; encrypted-media; fullscreen" allowfullscreen sandbox = "allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-top-navigation"></iframe>
+<iframe src="//ok.ru/videoembed/9170702638692?nochat=1" style="position: absolute; top:0; left:0; width: 100%; height: 100%; border: 0;" allow="autoplay; encrypted-media; fullscreen" allowfullscreen sandbox = "allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-top-navigation"></iframe>
 </div>
