--- a/prueba.html
+++ b/prueba.html
@@ -21,4 +21,10 @@
             height: "100%",
             aspectratio: "16:9",
             autostart: true,
-            cast:
+            cast: {},
+            sharing: {},
+            tracks: []
+        });
+    </script>
+</body>
+</html>
