--- a/index.html
+++ b/index.html
@@ -1,155 +1,39 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Player</title>
-
+<meta charset="utf-8">
+<title>Player HLS</title>
+<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 <style>
-body {
-  margin: 0;
-  background: #0b0b0b;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-}
-
-.player-wrapper {
-  max-width: 100%;
-  padding: 10px;
-}
-
-.embed-container {
-  position: relative;
-  width: 100%;
-  padding-bottom: 56.25%;
-  border-radius: 14px;
-  overflow: hidden;
-  background: #000;
-}
-
-.embed-container iframe {
-  position: absolute;
-  inset: 0;
-  width: 100%;
-  height: 100%;
-  border: none;
-}
-
-.preloader {
-  position: absolute;
-  inset: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background: rgba(0,0,0,.6);
-  color: #fff;
-  z-index: 5;
-}
-
-.loader {
-  width: 40px;
-  height: 40px;
-  border: 3px solid rgba(255,255,255,.3);
-  border-top-color: #fff;
-  border-radius: 50%;
-  animation: spin 1s linear infinite;
-  margin-bottom: 10px;
-}
-
-@keyframes spin {
-  to { transform: rotate(360deg); }
-}
-
-.hide {
-  opacity: 0;
-  visibility: hidden;
-}
+html,body{margin:0;background:#000}
+video{width:100%;height:100vh}
 </style>
 </head>
-
 <body>
 
-<div class="player-wrapper">
-  <div class="embed-container">
-    <div id="preloader" class="preloader">
-      <div class="loader"></div>
-      <span>Cargando stream…</span>
-    </div>
-    <div id="embed"></div>
-  </div>
-</div>
+<video id="video" controls autoplay playsinline></video>
 
 <script>
-(function () {
+const video = document.getElementById('video');
+const src = "https://node-8bba18be.streamtofu.com/69850e6e.14c35.67925795.45a3a824/nflsdquality/master.m3u8";
 
-  const RELOAD_INTERVAL = 15000; // 15s si se congela
-  let lastLoadTime = Date.now();
-  let iframe;
+if (Hls.isSupported()) {
+  const hls = new Hls({
+    lowLatencyMode: true,
+    maxBufferLength: 30
+  });
+  hls.loadSource(src);
+  hls.attachMedia(video);
 
-  function getParam(name) {
-    return new URLSearchParams(window.location.search).get(name);
-  }
-
-  function decodeBase64(str) {
-    try {
-      return decodeURIComponent(escape(atob(str)));
-    } catch {
-      return null;
+  hls.on(Hls.Events.ERROR, function (event, data) {
+    if (data.fatal) {
+      hls.destroy();
+      setTimeout(() => location.reload(), 2000);
     }
-  }
-
-  function loadIframe(url) {
-    const container = document.getElementById('embed');
-    const preloader = document.getElementById('preloader');
-
-    container.innerHTML = '';
-    preloader.classList.remove('hide');
-
-    iframe = document.createElement('iframe');
-    iframe.src = url;
-    iframe.allow = "autoplay; encrypted-media; fullscreen";
-    iframe.allowFullscreen = true;
-
-    iframe.onload = () => {
-      lastLoadTime = Date.now();
-      preloader.classList.add('hide');
-    };
-
-    iframe.onerror = () => {
-      retry(url);
-    };
-
-    container.appendChild(iframe);
-  }
-
-  function retry(url) {
-    setTimeout(() => loadIframe(url), 2000);
-  }
-
-  function watchdog(url) {
-    setInterval(() => {
-      if (Date.now() - lastLoadTime > RELOAD_INTERVAL) {
-        loadIframe(url);
-      }
-    }, 5000);
-  }
-
-  const encoded = getParam('r');
-  if (!encoded) {
-    document.getElementById('preloader').innerText = 'Sin enlace válido';
-    return;
-  }
-
-  const finalURL = decodeBase64(encoded);
-  if (!finalURL) {
-    document.getElementById('preloader').innerText = 'Error en el enlace';
-    return;
-  }
-
-  loadIframe(finalURL);
-  watchdog(finalURL);
-
-})();
+  });
+} else if (video.canPlayType('application/vnd.apple.mpegurl')) {
+  video.src = src;
+}
 </script>
 
 </body>
