--- a/index.html
+++ b/index.html
@@ -1,132 +1,3 @@
-<!doctype html>
-<html lang="es">
-<head>
-<meta charset="utf-8">
-<title>HLS Player Auto-Reconnect</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-
-<style>
-html,body{
-  margin:0;
-  background:#000;
-  height:100%;
-}
-video{
-  width:100%;
-  height:100%;
-  background:#000;
-}
-#overlay{
-  position:fixed;
-  inset:0;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  color:#fff;
-  font-family:Arial;
-  font-size:16px;
-  background:rgba(0,0,0,.5);
-  z-index:10;
-}
-.hidden{display:none}
-</style>
-</head>
-
-<body>
-
-<div id="overlay">Reconectando stream…</div>
-<video id="video" controls autoplay playsinline></video>
-
-<script>
-function getParam(name){
-  const params = new URLSearchParams(window.location.search);
-  return params.get(name);
-}
-
-const encoded = getParam('r');
-const video = document.getElementById('video');
-const overlay = document.getElementById('overlay');
-
-if(!encoded){
-  overlay.innerText = "No hay stream válido";
-  throw new Error("Sin parámetro r");
-}
-
-let STREAM_URL;
-try{
-  STREAM_URL = atob(encoded);
-}catch(e){
-  overlay.innerText = "Error en Base64";
-  throw e;
-}
-
-let hls;
-let restartTimer = null;
-
-function startPlayer(){
-  overlay.classList.add('hidden');
-
-  if(hls){
-    hls.destroy();
-    hls = null;
-  }
-
-  if(Hls.isSupported()){
-    hls = new Hls({
-      lowLatencyMode:true,
-      enableWorker:true,
-      maxBufferLength:30,
-      maxMaxBufferLength:60
-    });
-
-    hls.loadSource(STREAM_URL);
-    hls.attachMedia(video);
-
-    hls.on(Hls.Events.ERROR, function(event, data){
-      if(data.fatal){
-        restartStream();
-      }
-    });
-
-  }else if(video.canPlayType('application/vnd.apple.mpegurl')){
-    video.src = STREAM_URL;
-  }
-
-  video.play().catch(()=>{});
-}
-
-function restartStream(){
-  overlay.classList.remove('hidden');
-  clearTimeout(restartTimer);
-  restartTimer = setTimeout(startPlayer, 1500);
-}
-
-// 🔁 Si se pausa, se friza o se cae
-video.addEventListener('stalled', restartStream);
-video.addEventListener('error', restartStream);
-video.addEventListener('ended', restartStream);
-
-// 🔁 Watchdog: si no avanza el tiempo → reinicia
-let lastTime = 0;
-setInterval(()=>{
-  if(video.currentTime === lastTime && !video.paused){
-    restartStream();
-  }
-  lastTime = video.currentTime;
-}, 4000);
-
-// 🔊 Forzar audio activo
-document.addEventListener('click', ()=>{
-  video.muted = false;
-  video.volume = 1;
-  video.play().catch(()=>{});
-},{once:true});
-
-// 🚀 Iniciar
-startPlayer();
-</script>
-
-</body>
-</html>
+<div style="width: 100%; height:0; position: relative; padding-bottom: 56.24929688378895%;">
+<iframe src="https://teledeportes.top/ch.php?id=espn1co" style="position: absolute; top:0; left:0; width: 100%; height: 100%; border: 0;" allow="autoplay; encrypted-media; fullscreen" allowfullscreen sandbox = "allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-top-navigation"></iframe>
+</div>
