--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
-<div style="width: 100%; height:0; position: relative; padding-bottom: 56.24929688378895%;">
-<iframe src="https://teledeportes.top/ch.php?id=espn1co" style="position: absolute; top:0; left:0; width: 100%; height: 100%; border: 0;" allow="autoplay; encrypted-media; fullscreen" allowfullscreen sandbox = "allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-top-navigation"></iframe>
-</div>
+<video id="v" controls autoplay></video>
+<script src="https://cdn.jsdelivr.net/npm/hls.js"></script>
+<script>
+var hls = new Hls();
+hls.loadSource("http://72.61.27.220/hls/test.m3u8");
+hls.attachMedia(document.getElementById("v"));
+</script>
