--- a/canal1.html
+++ b/canal1.html
@@ -15,17 +15,33 @@ html, body {
     width: 100%;
     height: 100%;
 }
+#overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: black;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    cursor: pointer;
+    z-index: 9999;
+}
 </style>
 </head>
 
 <body>
 
-<iframe id="iframePlayer"></iframe>
+<div id="overlay">▶ TOCA PARA ACTIVAR SONIDO</div>
+<iframe id="iframePlayer" allow="autoplay; fullscreen; encrypted-media"></iframe>
 
 <script>
 // ===== CONFIG =====
-let RELOAD_TIME = 15000; // 15 segundos sin carga = reload
-let FORCE_RELOAD_EVERY = 5 * 60 * 1000; // 5 minutos reload preventivo
+let RELOAD_TIME = 15000;
+let FORCE_RELOAD_EVERY = 5 * 60 * 1000;
 
 // Get param
 function getParam(name) {
@@ -42,39 +58,47 @@ if (!encoded) {
 encoded = encoded.replace(/-/g, '+').replace(/_/g, '/');
 while (encoded.length % 4) encoded += '=';
 
-// Decode URL
+// Decode
 let url = atob(encoded);
-console.log("LOADING:", url);
+console.log("LOAD:", url);
 
 let iframe = document.getElementById("iframePlayer");
+let overlay = document.getElementById("overlay");
 let lastLoad = Date.now();
 
-// Load iframe
+// Load iframe with autoplay param if possible
 function loadPlayer() {
-    console.log("Reloading player...");
-    iframe.src = url + "&_t=" + Date.now(); // cache bypass
+    console.log("Reloading iframe...");
+    let autoURL = url;
+    if (!autoURL.includes("?")) autoURL += "?autoplay=1";
+    else autoURL += "&autoplay=1";
+
+    iframe.src = autoURL + "&_t=" + Date.now();
     lastLoad = Date.now();
 }
 
 loadPlayer();
 
-// Detect iframe load event
+// Detect iframe load
 iframe.onload = function() {
-    console.log("Iframe loaded OK");
     lastLoad = Date.now();
 };
 
-// Watchdog freeze detector
+// Watchdog reload
 setInterval(function() {
-    let now = Date.now();
-    if (now - lastLoad > RELOAD_TIME) {
-        console.log("FREEZE DETECTED -> Reload");
+    if (Date.now() - lastLoad > RELOAD_TIME) {
         loadPlayer();
     }
 }, 3000);
 
-// Forced reload every X minutes
+// Forced reload
 setInterval(loadPlayer, FORCE_RELOAD_EVERY);
+
+// Click to unlock audio
+overlay.addEventListener("click", function() {
+    overlay.style.display = "none";
+    iframe.focus();
+});
 </script>
 
 </body>
